String test commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">NetworkDiagnosticsApp</string>
+    <string name="app_name">Network Diagnostics App</string>
+    <string name="ssid_label">SSID: </string>
 </resources>
