--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Network Diagnostics App</string>
+
     <string name="ssid_label">SSID: </string>
+    <string name="ip_label">IP address: </string>
+    <string name="mac_label">MAC address: </string>
+    <string name="encryption_label">Encryption: </string>
+
 </resources>
