--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="mac_label">MAC address: </string>
     <string name="encryption_label">Encryption: </string>
 
+    <string name="not_found">Not found...</string>
+
 </resources>
