Start screen button functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
 
     <string name="not_found">Not found...</string>
 
+    <string name="refresh_button">Refresh</string>
+    <string name="scan_network_button">Scan network</string>
+
     <string name="action_wifi">Nearby Signals</string>
 
 </resources>
