--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="mac_label">MAC address: </string>
     <string name="encryption_label">Encryption: </string>
 
-    <string name="not_found">Not found...</string>
+    <string name="not_found">Connection not found</string>
 
     <string name="refresh_button">Refresh</string>
     <string name="scan_network_button">Scan network</string>
